gen/speech/v1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-speech1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/speech/v1/lib)
error[E0423]: expected value, found struct `locations::LocationsActions`
    --> gen/speech/v1/lib/src/lib.rs:1340:13
     |
1340 |             locations::LocationsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `locations::LocationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `operations::OperationsActions`
    --> gen/speech/v1/lib/src/lib.rs:1352:17
     |
1352 |                 operations::OperationsActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `operations::OperationsActions { /* fields */ }`?

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-speech1`.

To learn more, run the command again with --verbose.
